# tiger-voice-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
agent/: README.md  knowledge_base.md  prompt.md  vapi_config.json
agent/tools/: book_vkyc_slot.json  get_vkyc_slots.json  log_disposition.json  send_sms_link.json  transfer_to_human.json  trigger_activation.json  verify_identity.json
docs/: 01-architecture.md  02-agent-runtime.md  03-voice-infrastructure.md  04-event-system.md  05-compliance-security.md  06-delivery-playbook.md  07-observability.md  08-prompt-design.md
docs/diagrams/: agent-runtime-pipeline.mermaid  architecture.mermaid  delivery-timeline.mermaid  sequence-flow.mermaid  state-machine.mermaid
mock_backends/: Dockerfile  pyproject.toml
mock_backends/seed_data/: README.md  customers.json
mock_backends/src/: main.py
orchestrator/: Dockerfile  pyproject.toml
orchestrator/src/: compliance_gateway.py  config.py  decision_engine.py  dedup.py  event_consumer.py  main.py  models.py  session_store.py  state_machine.py
orchestrator/src/routes/: events.py  health.py  vapi_webhook.py
orchestrator/src/tool_handlers/: handlers.py
orchestrator/tests/: conftest.py  test_compliance_gateway.py  test_decision_engine.py  test_state_machine.py  test_webhook.py
scripts/: seed.py  test_call.py  trigger_event.py
