[project]
name = "tiger-mock-backends"
version = "0.1.0"
description = "Simulated Tiger Credit Card enterprise systems"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
