[project]
name = "tiger-orchestrator"
version = "0.1.0"
description = "AI Voice Agent orchestration layer for Tiger Credit Card"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "redis>=5.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
